docs: get subscriptions handler
